<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataDetail">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_avatar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="24dp"
        android:src="@color/colorPrimaryDark"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/tv_username"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detail_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/tv_name"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_username" />

    <TextView
        android:id="@+id/detail_repository"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_repository"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="@+id/detail_avatar"
        app:layout_constraintTop_toBottomOf="@+id/detail_company" />

    <TextView
        android:id="@+id/detail_company"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:text="@string/tv_company"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/detail_repository"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="@+id/detail_avatar"
        app:layout_constraintTop_toBottomOf="@+id/detail_name" />

    <TextView
        android:id="@+id/detail_location"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:text="@string/tv_location"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_repository"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/detail_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="100dp"
        android:text="@string/tv_followers"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/detail_following"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_avatar" />

    <TextView
        android:id="@+id/detail_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="49dp"
        android:text="@string/tv_following"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_followers"
        app:layout_constraintTop_toBottomOf="@+id/detail_location" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="35dp"
        android:minHeight="?actionBarSize"
        app:layout_constraintBottom_toTopOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_followers"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabRippleColor="@null"
        tools:ignore="MissingConstraints" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:layout_marginTop="375dp" />
</androidx.constraintlayout.widget.ConstraintLayout>